--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -33,6 +33,8 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
