--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.300.0",
     "chart.js": "^4.4.4",
     "react-chartjs-2": "^5.2.0",
+    "antd": "^5.19.2",
+    "@ant-design/icons": "^5.3.7",
     "react-grid-layout": "^1.3.4",
     "react-resizable": "^3.0.5",
     "jspdf": "^2.5.1",
