--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,17 @@
     "@react-native-async-storage/async-storage": "^1.23.0",
     "react-native-google-mobile-ads": "^14.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "nativewind": "^4.0.0"
+    "nativewind": "^4.0.0",
+    "zustand": "^4.5.2",
+    "i18next": "^23.10.1",
+    "react-i18next": "^13.2.2",
+    "expo-localization": "~16.0.0",
+    "expo-auth-session": "~5.0.1",
+    "expo-notifications": "~0.26.1",
+    "expo-application": "~6.0.1",
+    "expo-constants": "~16.0.0",
+    "react-native-purchases": "^6.7.0",
+    "@react-native-community/netinfo": "^11.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
